// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs no-deprecated.mdx code examples ESLint output 1`] = `
"Incorrect

/** @deprecated Use @see {@link apiV2} instead. */
declare function apiV1(): Promise<string>;

declare function apiV2(): Promise<string>;

await apiV1();
      ~~~~~ \`apiV1\` is deprecated. Use
"
`;

exports[`Validating rule docs no-deprecated.mdx code examples ESLint output 2`] = `
"Incorrect

import { parse } from 'node:url';

// 'parse' is deprecated. Use the WHATWG URL API instead.
const url = parse('/foo');
            ~~~~~ \`parse\` is deprecated. Use the WHATWG URL API instead.
"
`;

exports[`Validating rule docs no-deprecated.mdx code examples ESLint output 3`] = `
"Correct

/** @deprecated Use @see {@link apiV2} instead. */
declare function apiV1(): Promise<string>;

declare function apiV2(): Promise<string>;

await apiV2();
"
`;

exports[`Validating rule docs no-deprecated.mdx code examples ESLint output 4`] = `
"Correct

// Modern Node.js API, uses \`new URL()\`
const url2 = new URL('/foo', 'http://www.example.com');
"
`;
